[package]
name         = "rocstr"
version      = "0.5.1"
edition      = "2021"
rust-version = "1.60"
description  = "An immutable fixed capacity stack based generic copy string"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/OuiCloud/rocstr"
authors      = ["Philipe Menuet Tang <philippe@ouicloud.software>"]
keywords     = ["string", "immutable", "stack", "no_std"]
categories   = ["data-structures", "no-std"]

[package.metadata.cargo-sync-rdme.badge]
style = "for-the-badge"

[package.metadata.cargo-sync-rdme.badge.badges]
license      = { link = "#LICENCE_APACHE" }
crates-io    = true
docs-rs      = true
rust-version = true
codecov      = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bytes          = { version = "1.6", optional = true, default-features = false }
postgres-types = { version = "0.2", optional = true, default_features = false }
serde          = { version = "1.0", optional = true, default_features = false }

[dev-dependencies]
arrayvec         = { version = "0.7" }
criterion        = { version = "0.5", features = ["html_reports"] }
imstr            = { version = "0.2" }
inlinable_string = { version = "0.1" }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = { version = "1.0" }
smol_str         = { version = "0.2" }

[features]
default  = ["std"]
std      = ["serde?/std"]
postgres = ["std", "dep:postgres-types", "dep:bytes"]

[[bench]]
name    = "strings"
harness = false
