[package]
name          = "rocstr"
version       = "0.5.1"
edition       = "2018"
rust-version  = "1.51"
description   = "An immutable fixed capacity stack based generic copy string"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/OuiCloud/rocstr"
homepage      = "https://github.com/OuiCloud/rocstr"
documentation = "https://docs.rs/rocstr"
readme        = "README.md"
authors       = ["Philipe Menuet Tang <philippe@ouicloud.software>"]
keywords      = ["string", "immutable", "stack", "no_std"]
categories    = ["data-structures", "no-std"]

exclude = [".vscode/*", ".github/*"]

[package.metadata.cargo-sync-rdme.badge]
style = "for-the-badge"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance    = true
rust-version   = true
crates-io      = true
docs-rs        = true
github-actions = { workflows = [{ file = "audit.yml", name = "Security Audit" }, { file = "tests.yml", name = "Unit Tests" }] }
codecov        = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bytes          = { version = "1.6", optional = true, default-features = false }
postgres-types = { version = "0.2", optional = true, default_features = false }
serde          = { version = "1.0", optional = true, default_features = false }

[dev-dependencies]
arrayvec         = { version = "0.7" }
criterion        = { version = "0.5", features = ["html_reports"] }
imstr            = { version = "0.2" }
inlinable_string = { version = "0.1" }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = { version = "1.0" }
smol_str         = { version = "0.2" }

[features]
default  = []
std      = []
postgres = ["postgres-types", "bytes"]

[[bench]]
name    = "strings"
harness = false
